# yupigeon-back

./: .gitignore  .rustfmt.toml  Cargo.toml  CargoMake.toml  Dockerfile  config  docker-compose.yaml
database/: Cargo.toml
database/src/: base.rs  config.rs  database.rs  lib.rs
database/src/entity/: canyon_daily_sales_append.rs  canyon_link_ticket_type.rs  canyon_offline_ticket_bill.rs  canyon_online_ticket_bill.rs  canyon_ticket_client.rs  canyon_ticket_type.rs  canyon_ticket_type_item.rs  finance_account.rs  finance_link_subsidiary_group.rs  finance_link_voucher_template_group.rs  finance_subsidiary_account.rs  finance_subsidiary_business.rs  finance_subsidiary_client.rs  finance_subsidiary_conductor.rs  finance_subsidiary_group.rs  finance_subsidiary_receipt_type.rs  finance_subsidiary_ship.rs  finance_subsidiary_ship_line.rs  finance_subsidiary_tax.rs  finance_voucher_template.rs  finance_voucher_template_group.rs  investment_real_estates.rs  investment_real_estates_lease_history.rs  link_user2role.rs  mapper_domain_value.rs  mod.rs  role.rs  ship_ticket_bill.rs  ship_ticket_refund_bill.rs  token.rs  user.rs
database/src/entity/ship_ticket_bill/: client_sales.rs  conductors.rs  daily_receipt.rs  execute_create_table.rs  execute_drop_table.rs  execute_insert_ticket_bill.rs  execute_set_time_zone.rs  execute_update_laiu8_info.rs  execute_update_order_info.rs  execute_update_ticket_bill.rs  execute_update_ticket_bill_others.rs  index.rs  mod.rs  offline_conductor_daily_receipt.rs  ship_ticket_client_sales.rs  ship_ticket_clients.rs  ship_ticket_daily_receipt.rs  ship_ticket_daily_sales.rs
database/src/entity/ship_ticket_bill/refresh_sql/: laiu8_info.rs  mod.rs
database/src/entity/ship_ticket_bill/ship_ticket_bill_refresh/: create_ship_ticket_bill.rs  drop_ship_ticket_bill.rs  insert_ship_ticket_bill.rs  mod.rs  set_time_zone.rs  update_laiu8_info.rs  update_order_info.rs  update_ship_ticket_bill.rs  update_ship_ticket_bill_others.rs
database/src/entity/tenpay_bill/: mod.rs  tenpay_bill_daily_receipt.rs
database/src/mongo/: base.rs  common.rs  mod.rs
database/src/mongo/collection/: finance_account.rs  finance_assist_account.rs  finance_assist_channel.rs  finance_assist_client.rs  finance_assist_payment.rs  finance_assist_product.rs  finance_assist_ship.rs  finance_assist_supplier.rs  finance_assist_tool.rs  finance_voucher_template.rs  mod.rs  organization_company.rs  organization_group.rs  version.rs
database/src/mongo/query/: common.rs  database_info.rs  organization.rs
database/src/mongo/query/finance/: account.rs  assist.rs  voucher.rs
database/src/mysql/: base.rs  mod.rs
database/src/mysql/entity/: canyon_daily_sales_append_oracle.rs  canyon_online_ticket_bill.rs  canyon_statistics_times.rs  finance_kingdee_cloud_voucher_combine.rs  finance_subsidiary_account.rs  finance_subsidiary_business.rs  finance_subsidiary_conductor.rs  investment_real_estates_lease_history.rs  link_user2role.rs  mapper_domain_value.rs  mod.rs  ship_ticket_bill.rs  ship_ticket_refund_bill.rs  token.rs  user.rs
database/src/mysql/query/: common.rs  mapper.rs  token.rs  user.rs
database/src/mysql/query/canyon/: clients.rs  daily_sales_append_oracle.rs  mod.rs  operators.rs  (+3 more)
database/src/oracle/: base.rs  mod.rs
database/src/oracle/query/: canyon_ticket_bill.rs  canyon_ticket_type.rs  common.rs  daily_sales.rs  mod.rs  operators.rs  ticket_bill.rs  ticket_type.rs
database/src/query/: common.rs  finance_account.rs  finance_subsidiary.rs  finance_voucher.rs  mapper.rs  mod.rs  token.rs  user.rs
database/src/query/canyon/: clients.rs  mod.rs  operators.rs  ticket_bill.rs  ticket_type.rs
database/src/query/commercial_street/: investment_real_estates.rs  mod.rs  rent_revenue.rs
database/src/query/finance/: account.rs  mod.rs  subsidiary.rs  voucher.rs
database/src/query/ship_ticket/: bill.rs  client_sales.rs  clients.rs  conductors.rs  daily_receipt.rs  daily_sales.rs  fee_revenue.rs  mod.rs  refund_bill.rs  ticket_revenue.rs  voucher_revenue.rs
database/src/query/ship_ticket_bill/: client_sales.rs  clients.rs  conductor_daily_receipt.rs  conductors.rs  daily_receipt.rs  daily_sales.rs  mod.rs  refresh.rs  voucher_revenue.rs
database/src/query/tenpay/: daily_receipt.rs
database/src/query/tenpay_bill/: daily_receipt.rs
database/src/ship_ticket_bill/: mod.rs
database/src/ship_ticket_bill/refresh_sql/: bt_ticket_info.rs  mod.rs  refund_info.rs
database/src/tenpay_bill/: mod.rs
file-server/: .env  Cargo.toml  Config.toml
file-server/src/: config.rs  main.rs
file-server/src/api/: file.rs  file_dir.rs  greet.rs  mod.rs
file-server/src/service/: mod.rs  router.rs
mongo/: Cargo.toml
mongo/src/: base.rs  common.rs  config.rs  error.rs  lib.rs
mongo/src/collection/: finance_account.rs  finance_assist_account.rs  finance_assist_account_group.rs  finance_assist_channel.rs  finance_assist_client.rs  finance_assist_payment.rs  finance_assist_product.rs  finance_assist_receipt.rs  finance_assist_ship.rs  finance_assist_supplier.rs  finance_assist_tool.rs  finance_voucher_template.rs  mod.rs  organization_company.rs  organization_group.rs  version.rs
mongo/src/query/: common.rs  database_info.rs  mod.rs  organization.rs
mongo/src/query/finance/: account.rs  assist.rs  mod.rs  voucher.rs
server/: Cargo.toml
server/src/: config.rs  main.rs
server/src/api/: canyon.rs  commercial_street.rs  finance.rs  greet.rs  login.rs  mapper.rs  mod.rs  mongo.rs  mongo_finance.rs  mongo_info.rs  mongo_organization.rs  oracle_canyon.rs  ship_ticket.rs  tenpay.rs  user.rs  websocket.rs
server/src/service/: auth.rs  common.rs  error.rs  global_data.rs  mod.rs  params.rs  response.rs  router.rs  utils.rs
yupigeon-server/: Cargo.toml
yupigeon-server/src/: config.rs  main.rs
yupigeon-server/src/api/: commercial_street.rs  finance.rs  finance_account.rs  finance_subsidiary.rs  finance_voucher.rs  greet.rs  login.rs  mapper.rs  mod.rs  ship_ticket.rs  ship_ticket_bill.rs  tenpay_bill.rs  user.rs
yupigeon-server/src/service/: global_data.rs  mod.rs  router.rs  utils.rs
(+26 files in other folders)
