[package]
name = "database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "^0.12"
once_cell = { version = "^1" }

serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
# chrono = { version = "^0.4", features = ["serde"] }

sea-orm = { version = "^0.7", features = [
    "sqlx-mysql",
    "sqlx-postgres",
    "runtime-tokio-native-tls",
    "debug-print",
    "macros",
    "with-chrono",
    "with-rust_decimal",
    "with-json",
], default-features = false }

async-recursion = "^1.0"