[package]
name = "database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macro-lib = { path = "../macro-lib" }

config = "^0.12"
once_cell = { version = "^1" }

serde = { version = "1", features = ["derive"] }
serde_json = "^1.0"

sea-orm = { version = "^0.7", features = [
    "sqlx-mysql",
    "sqlx-postgres",
    "runtime-tokio-native-tls",
    "debug-print",
    "macros",
    "with-chrono",
    "with-rust_decimal",
    "with-json",
], default-features = false }

async-recursion = "^1.0"
async-trait = "^0.1"

mongodb = { version = "^2", features = [
    "tokio-runtime",
    "bson-chrono-0_4",
    "bson-serde_with",
    "zstd-compression",
] }
futures = "^0.3"
anyhow = "^1.0"
thiserror = "^1.0"

sibyl = { version="0.6", features=["tokio","nonblocking"] }
