[package]
name = "database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macro-lib = { path = "../macro-lib" }

config = "^0.13"
once_cell = { version = "^1" }

serde = { version = "1", features = ["derive"] }
serde_json = "^1.0"
chrono = { version = "^0.4", features = ["serde"] }

sea-orm = { version = "^0.8", features = [
    "sqlx-mysql",
    "sqlx-postgres",
    "runtime-tokio-native-tls",
    "debug-print",
    "macros",
    "with-chrono",
    "with-rust_decimal",
    "with-json",
], default-features = false }

async-recursion = "^1.0"
async-trait = "^0.1"

mongodb = { version = "^2", features = [
    "tokio-runtime",
    "bson-chrono-0_4",
    "bson-serde_with",
    "zstd-compression",
] }
futures = "^0.3"
anyhow = "^1.0"
thiserror = "^1.0"

oracle = { version = "^0.5", features = ["chrono"] }
