# @Author: westhide.yzw
# @Date: 2022-02-22 12:36:32
# @Last Modified by:   westhide.yzw
# @Last Modified time: 2022-02-22 12:36:32


[package]
name = "file-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "^0.12"
once_cell = "^1.9"
poem = { version = "^1.3", features = ["static-files", "compression"] }
tokio = { version = "^1.15", features = ["rt-multi-thread", "macros"] }
tracing-subscriber = "^0.3"
serde = { version = "^1.0", features = ["derive"] }
sysinfo = { version = "^0.23" }
async-recursion = "^1.0"
futures = "^0.3"
chrono = { version = "^0.4", features = ["serde"] }
