[package]
name = "mongo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = { version = "^2", features = [
    "tokio-runtime",
    "bson-chrono-0_4",
    "bson-serde_with",
    "zstd-compression",
] }
futures = "^0.3"

config = "^0.12"
once_cell = { version = "^1" }

serde = { version = "1", features = ["derive"] }
serde_json = "^1.0"

async-trait = "^0.1"