[package]
name = "server"
version = "0.1.0"
edition = "2021"
default-run = "server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
database = { path = "../database" }

config = "^0.12"
once_cell = "^1.9"
poem = { version = "^1.3", features = ["compression","websocket"] }
tokio = { version = "^1.15", features = ["rt-multi-thread", "macros"] }
futures-util="^0.3"
tracing-subscriber = "^0.3"
thiserror = "^1.0"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
chrono = { version = "^0.4", features = ["serde"] }
