[package]
name = "yupigeon-server"
version = "0.1.0"
edition = "2021"
default-run = "yupigeon-server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
database = { path = "../database" }
config = "^0.12"
once_cell = "^1.9"
poem = { version = "^1.3", features = ["compression"] }
tokio = { version = "^1.15", features = ["rt-multi-thread", "macros"] }
tracing-subscriber = "^0.3"
serde = { version = "^1.0", features = ["derive"] }
